<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/nav_header"
        android:layout_width="match_parent"
        android:layout_height="197dp"
        android:background="@drawable/left2"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/userImaage"
            android:layout_width="345dp"
            android:layout_height="86dp"
            app:srcCompat="@drawable/user" />

        <Button
            android:id="@+id/sign_out_buton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/userImaage"
            android:layout_below="@+id/userImaage"
            android:text="@string/Sign_out"
            android:layout_alignRight="@+id/userImaage" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/userImaage"
            android:layout_below="@+id/userImaage"
            android:layout_alignLeft="@+id/userImaage">

        </com.google.android.gms.common.SignInButton>

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/userImaage"
            android:layout_below="@+id/sign_out_buton"
            android:ellipsize="end"
            android:paddingTop="4dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/userImaage" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/homepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/homepage" />

                <Button
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/Account" />

                <Button
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/About" />

                <Button
                    android:id="@+id/share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/Share" />

                <Button
                    android:id="@+id/evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/Evaluation" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>